--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,315 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: rgb(41, 38, 38);
+  padding: 0;
+  display: flex;
+}
+.poster {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.movie-container {
+  margin-top: 5rem;
+  display: flex;
+  max-width: 100vw;
+  flex-wrap: wrap;
+  max-width: fit-content;
+  margin: 0 9.7vw;
+  justify-content: center;
+}
+.card {
+  flex-wrap: nowrap;
+  height: 440px;
+  width: 280px;
+  margin: 2rem;
+  position: relative;
+  transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  border-radius: 1em;
+  /* box-shadow: 10px 0 10px 8px #5d5d5d; */
+}
+
+/*Image*/
+.card-image {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  /* background: #040509; */
+  /* background: linear-gradient(to top, #676767, #343c46); */
+  font-size: 2em;
+  font-weight: 600;
+  color: #1f1d1d;
+}
+
+/*Description */
+.card-description {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  height: 70%;
+  bottom: 0;
+  border-radius: 1em 1em 0 0;
+  transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  padding: 1rem;
+  opacity: 0.7;
+}
+
+/*Text*/
+.text-title {
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
+.text-body {
+  font-size: 1em;
+  line-height: 150%;
+}
+
+/* Hover states */
+
+.card:hover .card-description {
+  transform: translateY(100%);
+}
+.noStylebtn {
+  background: none;
+  border: none;
+  margin: 2px;
+  margin-right: 10px;
+  visibility: visible;
+  color: #a0a0a0;
+}
+
+/*  ----- Side Bar  ------   */
+/* .navbar-collapse {
+  margin: 0;
+  position: absolute;
+} */
+.container {
+  margin: 0;
+  position: relative;
+}
+
+.container .sidebar {
+  position: fixed;
+  background-color: #fff;
+  height: 0;
+  width: fit-content;
+  z-index: 10;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
+}
+.sidebar li:nth-child(1) {
+  padding: 80px 0px;
+  margin: 15vh 0;
+}
+
+.sidebar li:hover:nth-child(1) {
+  padding: 50px 0px;
+  background-color: transparent;
+  color: #000;
+}
+
+.sidebar li {
+  padding: 5px;
+  cursor: pointer;
+  transition: all 0.5s;
+  letter-spacing: 1px;
+  display: flex;
+  color: #fff8f8;
+  flex-direction: column;
+}
+
+.sidebar li button:nth-child(1) {
+  font-size: 30px;
+}
+
+.sidebar li button:nth-child(2) {
+  font-size: 20px;
+}
+
+.sidebar li:hover {
+  /* background-color: rgb(255, 250, 250); */
+  padding: 10px;
+}
+
+.container .content {
+  padding-left: 0px;
+}
+
+/*  ------  NavBar ----------- */
+.nav-div {
+  flex-wrap: wrap;
+}
+
+.carousel-item {
+  height: 65vh;
+  min-height: 300px;
+}
+
+.carousel-caption {
+  bottom: 150px;
+}
+
+.carousel-caption h2 {
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+}
+
+.carousel-caption p {
+  width: 75%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
+}
+
+.navbar-light .navbar-brand {
+  color: #fff;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.navbar-toggler {
+  background: #fff;
+}
+
+.navbar-nav {
+  text-align: center;
+}
+
+.nav-link {
+  padding: 0.2rem 1rem;
+}
+
+.nav-link.active,
+.nav-link:focus {
+  color: #fff;
+}
+
+.navbar-toggler {
+  padding: 1px 5px;
+  font-size: 18px;
+  line-height: 0.3;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #fff;
+}
+
+.navbtn {
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
+  overflow: hidden;
+}
+
+.navbtn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
+}
+
+.navbtn:hover {
+  color: #e8e8e8;
+}
+
+.navbtn:hover::before {
+  width: 100%;
+}
+
+/* --------------InputCard------------  */
+
+.InputCard {
+  width: 390px;
+  height: 554px;
+  margin: 0 auto;
+  background-color: #575757;
+  border-radius: 8px;
+}
+
+.tools {
+  display: flex;
+  align-items: center;
+  padding: 9px;
+}
+
+.circle {
+  padding: 0 4px;
+}
+
+.box {
+  display: inline-block;
+  align-items: center;
+  width: 10px;
+  height: 10px;
+  padding: 1px;
+  border-radius: 50%;
+}
+
+li {
+  list-style: none;
+}
+.inputin {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translateY(min(100px, 5vh));
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(min(100px, 5vh));
+  }
 }
